crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/041.cypher
MERGE (n:Node {id: $id}); MATCH (all) RETURN all
